# axil

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  justfile
crates/axil-changelog/: Cargo.toml
crates/axil-changelog/src/: main.rs
src/: app.rs  arguments.rs  channel_event.rs  event.rs  help_panel.rs  info_panel.rs  language.rs  main.rs  mode.rs  node_ext.rs  node_handle.rs  printer.rs  state.rs  status_line.rs  terminal.rs  tree_panel.rs  watcher.rs
tests/: integration.rs
