[package]
name = "axil"
version = "0.1.0"
description = "A terminal user interface for tree-sitter"
authors = ["Liam <liam@scalzulli.com>"]
license = "CC0-1.0"
homepage = "https://github.com/terror/axil"
repository = "https://github.com/terror/axil"
edition = "2021"
categories = ["development-tools"]
keywords = ["tree-sitter"]
resolver = "2"

include = [
  "/LICENSE",
  "/README.md",
  "/build.rs",
  "/src/",
  "/vendor/*-src/**.c",
  "/vendor/*-src/**/**.h"
]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
tree-sitter = "0.25.3"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"

[build-dependencies]
cc = "1.2.18"
