[package]
name = "axil"
version = "0.1.0"
description = "A terminal user interface for tree-sitter"
authors = ["Liam <liam@scalzulli.com>"]
license = "CC0-1.0"
homepage = "https://github.com/terror/axil"
repository = "https://github.com/terror/axil"
edition = "2021"
categories = ["development-tools"]
keywords = ["tree-sitter"]
resolver = "2"

include = [
  "/LICENSE",
  "/README.md",
  "/build.rs",
  "/src/",
  "/vendor/*-src/**.c",
  "/vendor/*-src/**/**.h"
]

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
enum-glob-use = "allow"
float-cmp = "allow"
large_enum_variant = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
must-use-candidate = "allow"
needless-pass-by-value = "allow"
pedantic = { level = "deny", priority = -1 }
result-large-err = "allow"
similar-names = "allow"
struct-field-names = "allow"
too-many-lines = "allow"
unused-async = "allow"
wildcard-imports = "allow"

[lints.rust]
mismatched-lifetime-syntaxes = "allow"
unreachable_pub = "deny"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
cli-clipboard = "0.4.0"
crossterm = "0.29.0"
ratatui = "0.29.0"
tree-sitter = "0.25.3"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-go = "0.23.4"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"

[build-dependencies]
cc = "1.2.18"

[dev-dependencies]
executable-path = "1.0.1"
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
unindent = "0.2.4"
